added login,register and authmiddleware features
