# app/routes/index.js
@@ -1,6 +1,7 @@
 const express = require("express")
 const router = express.Router()
 const userRouter = require("./users.route")
-router.use("/users",userRouter)
-
+const postRouter = require("./post.route")
+router.use("/users", userRouter)
+router.use("/post",postRouter)
 module.exports = router
