# app/routes/post.route.js
@@ -1,0 +1,12 @@
+const { Router } = require("express");
+
+const authMiddleware = require("../middleware/auth.middleware");
+const { createPost, getAllPost } = require("../controller/post.controller");
+const handleFileUpload = require("../middleware/uploadMiddleware");
+
+const router = Router();
+
+router.post("/", authMiddleware, handleFileUpload, createPost);
+router.get("/", authMiddleware, getAllPost);
+
+module.exports = router;
