# app/routes/users.route.js
@@ -1,10 +1,17 @@
 const { Router } = require("express");
-const { register, getAllUsers } = require("../controller/users.controller");
+const {
+  register,
+  getAllUsers,
+  login,
+} = require("../controller/users.controller");
+const authMiddleware = require("../middleware/auth.middleware");
 
 const router = Router();
 
 router.post("/", register);
 
-router.get("/", getAllUsers);
+router.get("/", authMiddleware, getAllUsers);
+
+router.post("/auth", login);
 
 module.exports = router;
